--- a/week5/kerstkaart/css/style_full.css
+++ b/week5/kerstkaart/css/style_full.css
@@ -34,35 +34,36 @@ nav {
     padding-bottom: 1rem;
     transition: .3s;
     z-index: 50;
+}
 
-    &:hover {
-        top: 0;
-    }
+nav:hover {
+    top: 0;
+}
 
-    ul {
-        display: flex;
-        list-style: none;
+nav ul {
+    display: flex;
+    list-style: none;
+}
 
-        li {
-            flex: 1;
+nav ul li {
+    flex: 1;
+}
 
-            a {
-                /*border: 1px solid red;*/
-                color: white;
-                text-decoration: none;
-                padding: 1rem;
-                display: block;
-                text-align: center;
-                font-size: .9rem;
-                transition: .3s;
+nav ul li a {
+    /*border: 1px solid red;*/
+    color: white;
+    text-decoration: none;
+    padding: 1rem;
+    display: block;
+    text-align: center;
+    font-size: .9rem;
+    transition: .3s;
+}
 
-                &:hover, &.active {
-                    background-color: rgba(255, 255, 255, 0.1);
-                    color: #3498db;
-                }
-            }
-        }
-    }
+nav ul li a:hover,
+nav ul li a.active {
+    background-color: rgba(255, 255, 255, 0.1);
+    color: #3498db;
 }
 
 main {
@@ -75,10 +76,10 @@ main {
     position: relative;
     cursor: move;
     transition: .3s ease;
+}
 
-    &:hover {
-        transform: translateY(-5px);
-    }
+main:hover {
+    transform: translateY(-5px);
 }
 
 #card {
@@ -92,72 +93,72 @@ main {
     padding: 1rem;
     display: flex;
     gap: 1rem;
+}
 
-    #right {
-        /*border: 1px solid red;*/
-        flex-basis: 300px;
-        text-align: right;
+#card #right {
+    /*border: 1px solid red;*/
+    flex-basis: 300px;
+    text-align: right;
+}
 
-        img {
-            position: relative;
-            margin-bottom: 4rem;
-        }
+#card #right img {
+    position: relative;
+    margin-bottom: 4rem;
+}
 
-        p {
-            font-family: 'Syne Mono', sans-serif;
-            border-bottom: 1px dotted #364759;
-            text-align: left;
-            margin: 1rem;
-            line-height: .6rem;
-            padding-top: 1rem;
+#card #right p {
+    font-family: 'Syne Mono', sans-serif;
+    border-bottom: 1px dotted #364759;
+    text-align: left;
+    margin: 1rem;
+    line-height: .6rem;
+    padding-top: 1rem;
+}
 
-            &:nth-of-type(even) {
-                padding-left: .5rem;
-            }
-        }
-    }
+#card #right p:nth-of-type(even) {
+    padding-left: .5rem;
+}
 
-    #left {
-        /*border: 1px solid orange;*/
-        flex-grow: 1;
-        font-family: 'Satisfy', cursive;
-        border-right: 1px dashed #c8c8c8;
-        padding: 1rem;
-        color: #445870;
-        display: flex;
-        flex-direction: column;
-        justify-content: space-between;
+#card #left {
+    /*border: 1px solid orange;*/
+    flex-grow: 1;
+    font-family: 'Satisfy', cursive;
+    border-right: 1px dashed #c8c8c8;
+    padding: 1rem;
+    color: #445870;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
 
-        header {
-            font-size: 3rem;
-            text-align: center;
-            margin-bottom: 1rem;
-        }
+#card #left header {
+    font-size: 3rem;
+    text-align: center;
+    margin-bottom: 1rem;
+}
 
-        div p {
-            font-size: 1.5rem;
-            line-height: 3rem;
+#card #left div p {
+    font-size: 1.5rem;
+    line-height: 3rem;
+}
 
-            &:first-of-type {
-                transform: rotate(-1deg);
-            }
+#card #left div p:first-of-type {
+    transform: rotate(-1deg);
+}
 
-            &:nth-of-type(2) {
-                transform: rotate(-3deg);
-            }
+#card #left div p:nth-of-type(2) {
+    transform: rotate(-3deg);
+}
 
-            &:last-of-type {
-                font-size: 4rem;
-                text-align: center;
-                margin: 3rem 0;
-            }
-        }
+#card #left div p:last-of-type {
+    font-size: 4rem;
+    text-align: center;
+    margin: 3rem 0;
+}
 
-        footer {
-            text-align: right;
-            font-size: 1.2rem;
-        }
-    }
+#card #left footer {
+    text-align: right;
+    font-size: 1.2rem;
 }
 
 #picture {
@@ -166,11 +167,11 @@ main {
     top: 0;
     left: 0;
     transition: 1s;
+}
 
-    &:hover {
-        filter: sepia(100%);
-        opacity: .15;
-    }
+#picture:hover {
+    filter: sepia(100%);
+    opacity: .15;
 }
 
 .snowflake {
